# picocalc-uf2-flash-nuke

./: CMakeLists.txt  README.md  fat32_init.c  nuke.c
.github/workflows/: cmake.yml
